syntax = "proto3";

package proto;

option go_package = "./";

service ACService {
    rpc RegisterAC(RegistACRequest) returns (RegistACResponse);
    rpc SelectSNs(StorageRequest) returns (StorageResponse);
    rpc PutFileCommit(PFCRequest) returns (PFCResponse);
    rpc GetFileSNs(GFACRequest) returns (GFACResponse);
}

//客户端发起的注册请求
message RegistACRequest{
    string clientId = 1; //客户端ID
    bytes G = 2;  // 字节切片类型的G字段
    bytes PK = 3; // 字节切片类型的PK字段
}

//审计方对客户端注册请求的回复
message RegistACResponse{
    string clientId = 1; //客户端ID
    string message = 2;  //回复信息
}

//客户端发起的存储请求
message StorageRequest {
    string clientId = 1;   //客户端ID
    string filename = 2;   //待存储的文件名
}

//审计方对存储请求的回复
message StorageResponse {
    string filename = 1;  //待存储的文件名
    repeated string sns_for_ds = 2;  //用于存储数据分片的存储节点id，下标对应分片的序号
    repeated string sns_for_ps = 3;  //用于存储校验分片的存储节点id，下标对应分片的序号
}

//客户端发起的写元信息请求
message PFCRequest {
    string clientId = 1;   //客户端ID
    string filename = 2;   //文件名
    map<string, int32> versions = 3;  //各分片对应的版本号
    map<string, string> timestamps = 4; //各分片对应的时间戳
}

//审计方对写元信息请求的回复
message PFCResponse {
    string filename = 1;  //待存储的文件名
    string message = 2;  //附带信息
}

//客户端发起的获取文件请求
message GFACRequest {
    string clientId = 1;   //客户端ID
    string filename = 2;   //请求的文件名
}

//审计方对获取文件请求的回复
message GFACResponse {
    string filename = 1;  //请求的文件名
    map<string, string> snsds = 2;  //数据分片所在的存储节点id，key:dsno,value:snid
}